# aamt-template

./: README.md  pyproject.toml
aamt/: __init__.py  cli.py  client.py  config.py  dao.py  fixture.py  func.py  logger.py  plugin.py  sample.py  scaffold.py
